--- a/css/style.css
+++ b/css/style.css
@@ -1361,6 +1361,6 @@ button {
 }
 
 .section-device img {
-    max-width: 80%;
-    margin: -50px auto 0;
+    max-width: 100%;
+    margin: 0px auto;
 }
